--- a/employeeMS/src/main/resources/application.yml
+++ b/employeeMS/src/main/resources/application.yml
@@ -2,4 +2,6 @@ spring:
   datasource:
     username: root
     password: root
-    url: jdbc:mysql://localhost:3306/barclayempdb
+    url: jdbc:mysql://localhost:3306/barclayempdb  jpa:    hibernate:      ddl-auto: update
+    show-sql: true
+server:  port: 9000
